HW Dec 8th two Qs

--- a/main.tex
+++ b/main.tex
@@ -2242,8 +2242,82 @@ corrected in time, the application will be refused.}`` --- \textsc{Euro-PCT Guid
         \item Composition comprising X for use as an antifungal agent \T --- Not a further medical use within the meaning of \textbf{Art. 53(c) EPC}, because the claim does not define a specific medical use of the claimed product. It encompasses non-medical uses, because antifungal/antibacterial agents are also used in e.g., agriculture for treating plants.
         \item Composition comprising X for use as an antibacterial agent \T --- Not a further medical use within the meaning of \textbf{Art. 53(c) EPC}, because the claim does not define a specific medical use of the claimed product. It encompasses non-medical uses, because antifungal/antibacterial agents are also used in e.g., agriculture for treating plants.
     \end{enumerate}
+
+    
+\section{December 08, 2025}
+
+\begin{enumerate}[label=\textbf{Question \arabic*}]
+
+    \item % Question 1
+    C5-18 \\
+    A European patent application EP1 has a main claim directed to a specially-shaped paddle wheel used in a pump in which the motive power is provided by a hydraulic motor. EP1 validly claims priority of an earlier national application DE1. The search report of EP1 mentions a European patent application EP2 published before the filing date of DE1 disclosing the same paddle wheel used in a pump powered by an electric motor. 
+    (\textit{Zsofia's comment: hydraulic motor and electric motor are equivalents.})
+    \begin{itemize}[]
+        \item Assess the patentability of EP1 in view of EP2. --- The claim is directed to a technical feature, so it is---in principle---patentable under \textbf{Art. 52 EPC}. The same paddle wheel is found in the prior art under \textbf{Art. 54(2) EPC} with a valid effective date before the priority date of \textsc{EP1}. The claim is novel over \textsc{EP2} because it discloses at least one feature that is different. However, since the hydraulic and electric motors are equivalent alternatives, the claim is certainly not inventive.
+        \item Would your answer have been different if EP2 was published on the filing date of DE1? --- if it's published \textbf{on the filing date} it becomes an \textbf{Art. 54(3) EPC} document, i.e., it can only be taken into account for a novelty attack and not inventive step. Hence, \textsc{EP1} would have been patentable.
+    \end{itemize}
+
+    \item % Question 2
+    C5-20 (Basic selection) \\
+    For many, many years, books are printed using well-known ink X.
+    Company C wished to have a more environmental-friendly ink than ink X. After an extensive R\&D program, Company C found that ink Y has similar printing properties when printing on paper as ink X but that the use of ink Y results surprisingly, in a very environmental-friendly printing on paper. Company C filed a European patent application describing their findings and experiments in detail, and claiming a book printed with ink Y.
+    The search report from the EPO cites two prior documents:
+    \begin{itemize}
+        \item D1 describes a plastic packaging where information is printed on the packaging using ink Y. D1 describes that ink Y is particularly suited for printing on plastic packaging as ink Y attached very well to plastic;
+        \item D2 describes printing of books using ink X and discusses in detail the color stability and ease of operation when using ink X for printing books.
+    \end{itemize}
+    
+    \vspace{1em}
+    Which is the closest prior art? Why? Argue why the claim is, or is not, inventive using the problem-solution approach. \\
+    
+    \p CPA is \textbf{D2} as it deals with printing books [our claim is directed to a product (book) printed using ink Y.] \textbf{D1} cannot really be CPA as the field of plastic packaging is too remote from printing books. \\
+    
+    \p Distinguishing feature over \textbf{D2} is the use of ink Y rather than ink X. So we are novel over \textbf{D2}. \\
+    
+    \p If the skilled person were to come across \textbf{D1} and its disclosed ink Y, he would see that \textbf{D1} discloses Y being particularly useful for printing on plastic. There is no direct pointer away from saying you cannot or should not try it on paper. The skilled person using common general knowledge that ink is used to print books on paper could have a reasonable expectation of success by trying to use ink Y in the process of \textbf{D2}. Nonetheless, the problem of \textbf{D1} is not to make more environmentally friendly printing of books but rather plastic packaging (a remote technical field). So we can assume the skilled person would not consult \textbf{D1} at all. \\
+    
+    \nt{Technical effect}{The use of ink Y results in very environmentally-friendly printing on paper}
+    
+    \nt{Objective technical problem}{How to achieve environmentally-friendly printing on paper when printing books?}
+    
+    So in light of the objective technical problem to be solved, one may argue that the invention is novel over the combination of \textbf{D1} applied to CPA \textbf{D2}. Skilled person has no incentive to consider \textbf{D1}, as the skilled person would not expect to find a solution to the OTP in a document relating to plastic packaging. \\
+    But even if the skilled person would consult \textbf{D1}, the skilled person would not find a solution to his OTP, i.e., to achieve a more environmental friendly printing on paper when printing books, as \textbf{D1} is \underline{silent about environmental effects}; it only discloses color stability, and because \textbf{D1} also \underline{silent about printing on paper}; it only discloses printing on plastic. \\
+    
+    So, the skilled person would not recognize from \textbf{D1} that ink Y would solve his problem. There is no teaching in the prior art that \textit{would} (not simply \textit{could}, but \textit{would}) have prompted the skilled person, faced with the OTP, to modify or adapt the CPA while taking account of that teaching (of \textbf{D1}), thereby arriving at something falling within the terms of the claims, and is thus not achieving what the invention achieves.
+
+
+    \item % Question 3
+    C6-13 \\
+    Consider whether there is unity of invention between the following claims in a European patent application and indicate whether each of the claims is independent or dependent:
+    \begin{itemize}
+        \item 1. Display with features A, B and C.
+        \item 2. Display with features A and B.
+        \item 3. Display according to claim 2 with added feature D.
+    \end{itemize}
+
+    \item % Question 4
+    C6-09 (Basic selection) \\
+    Consider whether there is unity of invention between the following claims in a European patent application. Assume that substance X is new and inventive.
+    \begin{itemize}
+        \item 1. Substance X.
+        \item 2. Method for the preparation of substance X.
+        \item 3. Use of substance X as a dye.
+    \end{itemize}
+
+    \item % Question 5
+    C6-25 (Basic selection) \\
+    Consider whether the following claims will be accepted by the EPO:
+    \begin{itemize}[label=(\alph*)]
+        \item A cabinet substantially as hereinbefore described with reference to any one of the accompanying Figures 1 to 5.
+        \item A cylinder head (12) for a motor engine (1) characterised in that ...
+        \item A (concrete) moulded brick characterised by ...
+        \item Chemical substance comprising (meth)acrylate ..."
+    \end{itemize}
+
 \end{enumerate}
 \end{enumerate}
 \end{enumerate}
+\end{enumerate}
+
 
 \end{document}
