HW Dec 8th all Qs

--- a/main.tex
+++ b/main.tex
@@ -2295,6 +2295,14 @@ corrected in time, the application will be refused.}`` --- \textsc{Euro-PCT Guid
         \item 3. Display according to claim 2 with added feature D.
     \end{itemize}
 
+    All the claims have unity of invention as they are linked by the special technical features \textsc{a and b}. Claim 3 refers to claim 2 directly so it should be dependent on it. Claim 1, in turn, comprises \textbf{ALL the features} of claim 2 and also has another feature. So by \textbf{R. 43(4) EPC} it needs to be a \underline{dependent} claim off of claim 2. \\
+    
+    \s Hence, claim 1 and 3 should refer to claim 2, which should be made the first claim.
+So, the order of claim 1 and 2 has to be reversed. \\
+
+    
+    
+    
     \item % Question 4
     C6-09 (Basic selection) \\
     Consider whether there is unity of invention between the following claims in a European patent application. Assume that substance X is new and inventive.
@@ -2304,14 +2312,16 @@ corrected in time, the application will be refused.}`` --- \textsc{Euro-PCT Guid
         \item 3. Use of substance X as a dye.
     \end{itemize}
 
+    \p Yes, these are independent claims in three different categories (product; method; use), which are all linked by a single inventive concept and a special technical feature, which distinguishes the invention over the prior art (X) by being novel and inventive. \\
+    
     \item % Question 5
     C6-25 (Basic selection) \\
     Consider whether the following claims will be accepted by the EPO:
-    \begin{itemize}[label=(\alph*)]
-        \item A cabinet substantially as hereinbefore described with reference to any one of the accompanying Figures 1 to 5.
-        \item A cylinder head (12) for a motor engine (1) characterised in that ...
-        \item A (concrete) moulded brick characterised by ...
-        \item Chemical substance comprising (meth)acrylate ..."
+    \begin{itemize}[]
+        \item A cabinet substantially as hereinbefore described with reference to any one of the accompanying Figures 1 to 5. \F -- this is an \textbf{\textit{omnibus}} claim that only consists of references and will not be allowable under \textbf{R. 43(6) EPC}. 
+        \item A cylinder head (12) for a motor engine (1) characterised in that ... \T -- looks OK. Has correct reference signs, ``configured for'' language and two-part form, with the preamble being clearly rather generic in describing the prior art.
+        \item A (concrete) moulded brick characterised by ... \F -- only references allowed in parentheses. The alternative of being made of concrete needs to be specified in a dependent claim maybe. 
+        \item Chemical substance comprising (meth)acrylate ... \T -- Bracketed expressions with a generally accepted meaning are allowable, e.g., "\textit{(meth)acrylate}," which is known as an abbreviation for "\textit{acrylate and methacrylate}" or other polymer-type language.
     \end{itemize}
 
 \end{enumerate}
