--- a/main.tex
+++ b/main.tex
@@ -15,6 +15,7 @@
 \newcommand{\s}{\adforn{74} \ }
 \newcommand{\T}{--- \textbf{True} }
 \newcommand{\F}{--- \textbf{False} }
+\usepackage{enumitem}
 
 
 \begin{document}
@@ -2325,9 +2326,158 @@ So, the order of claim 1 and 2 has to be reversed. \\
     \end{itemize}
 
 \end{enumerate}
-\end{enumerate}
-\end{enumerate}
-\end{enumerate}
+    
+%%%%%%%%%%%%%J ANUARY 12 2026
+    
+    
+    
+    
+    
+% --- PREAMBLE REQUIREMENT ---
+% Ensure you have  in your preamble
 
+\section{January 12, 2026}
 
+\begin{enumerate}[label=\textbf{Question \arabic*}, leftmargin=*]
+
+    % --- QUESTION 1 ---
+    \item H9-04 - T/F question (Basic selection) \\
+    Company X has filed an opposition against EP1. Company X is the sole opponent. Company Y, a competitor, is interested in continuing the opposition.
+
+    \vspace{0.5em}
+    \textbf{(a) For each statement, indicate True or False:}
+    \begin{itemize}[leftmargin=3.5em]
+        \item[\textbf{(a.1)}] Company X can transfer the opposition to Company Y by contract, wherein (only) the opposition is sold to Company Y. The transfer has effect vis-a-vis the EPO only at the date when and to the extent that the documents providing evidence of such transfer have been produced. Company Y will thus take Company X's position in the opposition proceedings as from that date. \F -- Opposition status can only be transferred as part of assets in a wholesale takeover of a company and assets related to the opposition.
+        \item[\textbf{(a.2)}] Company Y can join Company X to become joint opponents. Company X can subsequently withdraw from the opposition, leaving it to Company Y. \F --- it's too late to joint after 9-month opposition period.
+        \item[\textbf{(a.3)}] If Company P has instituted infringement proceedings against Company Y, Company Y can join the opposition as intervener. If Company X subsequently withdraws, the opposition will continue with Company Y as sole opponent. \T
+        \item[\textbf{(a.4)}] Company Y may submit third party observations while the opposition proceedings are pending. Company Y does not become an opponent by doing so, but if the submitted documents are prima facie relevant, the EPO shall continue the opposition at own motion, also after Company X has withdrawn. \T
+    \end{itemize}
+
+    \vspace{0.5em}
+    \textit{Company X and Company Y agree to merge into new company Z while the opposition is pending.}
+
+    \textbf{(b) For each statement, indicate True or False:}
+    \begin{itemize}[leftmargin=3.5em]
+        \item[\textbf{(b.1)}] As Company X no longer exists as a legal entity, no opponents remain. Opposition may however continue at the EPO own motion.
+        \item[\textbf{(b.2)}] As Company Z is the universal successor of Company X, Company Z will replace Company X as opponent.
+    \end{itemize}
+
+    \vspace{0.5em}
+    \textit{Company Z appealed as sole appellant. Z and P reach an agreement where Z obtains a license and agrees to withdraw the opposition.}
+
+    \textbf{(c) For each statement, indicate True or False:}
+    \begin{itemize}[leftmargin=3.5em]
+        \item[\textbf{(c.1)}] Upon receipt of the notice of withdrawal, the EPO will terminate the opposition appeal proceedings, as no Opponents remain.
+        \item[\textbf{(c.2)}] After receipt of the notice of withdrawal, the EPO may continue the opposition appeal proceedings at its own motion under R.84(2), last sentence.
+    \end{itemize}
+
+  
+
+    % --- QUESTION 2 ---
+    \item H9-06 - T/F question (Basic selection) \\
+    A notice of opposition is filed on the last day and the fee is paid. However, the notice was not signed.
+
+    \vspace{0.5em}
+    \textbf{(a) Signature:}
+    \begin{itemize}[leftmargin=3.5em]
+        \item[\textbf{(a.1)}] A signature is required. If the signature is not provided on the same day, the opposition will be deemed not to have been filed.
+        \item[\textbf{(a.2)}] A signature is required. The opponent will be invited to provide it within a period set by the EPO. If provided, the opposition is validly filed.
+        \item[\textbf{(a.3)}] A signature is required. If not provided within the set period, the opposition is deemed inadmissible.
+    \end{itemize}
+
+    \textbf{(b) Fee:}
+    \begin{itemize}[leftmargin=3.5em]
+        \item[\textbf{(b.1)}] If the deficiency is not timely rectified, the opposition fee will be refunded.
+        \item[\textbf{(b.2)}] Irrespective of whether the deficiency is rectified or not, the opposition fee will not be refunded.
+    \end{itemize}
+
+  
+
+    % --- QUESTION 3 ---
+    \item H9-12 - T/F question (Basic selection) \\
+    A third party wishes to file an opposition against a European patent.
+
+    \vspace{0.5em}
+    \textbf{(a) An opposition may be filed...}
+    \begin{itemize}[leftmargin=3.5em]
+        \item[\textbf{(a.1)}] ... On the ground of lack of novelty over public prior use in Australia.
+        \item[\textbf{(a.2)}] ... On the ground of non-patentability of methods for treatment of the animal body by surgery.
+        \item[\textbf{(a.3)}] ... On the ground of lack of unity.
+        \item[\textbf{(a.4)}] ... On the ground of lack of clarity of the claims.
+        \item[\textbf{(a.5)}] ... against a patent granted from a divisional application on the ground of extension beyond the content of the parent.
+    \end{itemize}
+
+    \textbf{(b) Based on arguments...}
+    \begin{itemize}[leftmargin=3.5em]
+        \item[\textbf{(b.1)}] ... as to lack of novelty over an intermediate prior art document in combination with an invalid priority claim.
+        \item[\textbf{(b.2)}] ... that the description is so unclear that the skilled person cannot carry it out.
+        \item[\textbf{(b.3)}] ... that the applicant is not entitled to the patent.
+    \end{itemize}
+
+    \textbf{(c) An opposition is limited to...}
+    \begin{itemize}[leftmargin=3.5em]
+        \item[\textbf{(c.1)}] ... the grounds of opposition given in the notice of opposition.
+        \item[\textbf{(c.2)}] ... the extent of opposition given in the notice of opposition.
+        \item[\textbf{(c.3)}] ... the facts and evidence cited in the notice of opposition.
+    \end{itemize}
+
+   
+
+    % --- QUESTION 4 ---
+    \item H9-14 - T/F question (Basic selection) \\
+    Opposition filed on the last day and fee paid. The notice indicated grounds but contained no facts, arguments, or evidence to substantiate them.
+    \begin{itemize}[label=\alph*)]
+        \item The opposition will be considered filed.
+        \item The opposition will be considered admissible.
+    \end{itemize}
+
+ 
+
+    % --- QUESTION 5 ---
+    \item H9-18 - T/F question (Basic selection) \\
+    Grant published 29 June 2022. Patent includes Claim 1 (product) and Claim 2 (process), not linked by unity. Today is 17 March 2023.
+    \begin{itemize}[label=\alph*)]
+        \item A notice of opposition must be filed at the latest by 29 March 2023.
+        \item If filed against claim 1 only, it can be extended to claim 2 after the expiry of the opposition period.
+        \item The statement setting out the grounds for opposition must be filed at the latest by 29 May 2023.
+        \item Lack of unity of the invention is a valid ground for opposition.
+    \end{itemize}
+
+  
+
+    % --- QUESTION 6 ---
+    \item (based on) H9-23 \\
+    Proprietor amends claims to a single independent claim by incorporating features of granted claim 2 into granted claim 1.
+    \begin{itemize}[label=--]
+        \item Is the opponent correct that the OD must always examine clarity of claims amended during proceedings (referring to G 9/91)?
+        \item Can the Opposition Division object to the amended claim as lacking clarity?
+    \end{itemize}
+
+ 
+
+    % --- QUESTION 7 ---
+    \item (based on) H9-39 \\
+    Proprietor requests limitation. Later, an opposition is filed.
+    \begin{itemize}[label=\alph*)]
+        \item What is the legal situation/priority of proceedings?
+        \item Does the prior art document found by the Japanese patent office have to be filed when requesting limitation?
+        \item Would the answer to (a) be different if the proprietor requested revocation?
+    \end{itemize}
+
+   
+
+    % --- QUESTION 8 ---
+    \item H9-41 - T/F question (Basic selection) \\
+    Grant: Nov 2020. Limitation requested: Jan 2022. Decision published: 25 May 2022.
+    \begin{itemize}[label=\alph*)]
+        \item The third party can file a 1967 publication as third party observations during limitation proceedings.
+        \item The EPO will examine the request for limitation for novelty.
+        \item The third party can file the publication as third party observations after the decision to limit is published.
+        \item The third party may file a notice of opposition until 25 February 2023.
+    \end{itemize}
+
+\end{enumerate} % End of LEVEL 1
+\end{enumerate}
+\end{enumerate}
+\end{enumerate}
 \end{document}
