HW Jan 12 part2

--- a/main.tex
+++ b/main.tex
@@ -16,6 +16,8 @@
 \newcommand{\T}{--- \textbf{True} }
 \newcommand{\F}{--- \textbf{False} }
 \usepackage{enumitem}
+\newcommand{\art}[1]{\textbf{Art.~#1~EPC}}
+\newcommand{\ru}[1]{\textbf{Rule~#1~EPC}}
 
 
 \begin{document}
@@ -2358,8 +2360,8 @@ So, the order of claim 1 and 2 has to be reversed. \\
 
     \textbf{(b) For each statement, indicate True or False:}
     \begin{itemize}[leftmargin=3.5em]
-        \item[\textbf{(b.1)}] As Company X no longer exists as a legal entity, no opponents remain. Opposition may however continue at the EPO own motion.
-        \item[\textbf{(b.2)}] As Company Z is the universal successor of Company X, Company Z will replace Company X as opponent.
+        \item[\textbf{(b.1)}] As Company X no longer exists as a legal entity, no opponents remain. Opposition may however continue at the EPO own motion. \F -- Company \textsc{Z} simply takes over assets of company X; including opposition. 
+        \item[\textbf{(b.2)}] As Company Z is the universal successor of Company X, Company Z will replace Company X as opponent. \T
     \end{itemize}
 
     \vspace{0.5em}
@@ -2367,10 +2369,11 @@ So, the order of claim 1 and 2 has to be reversed. \\
 
     \textbf{(c) For each statement, indicate True or False:}
     \begin{itemize}[leftmargin=3.5em]
-        \item[\textbf{(c.1)}] Upon receipt of the notice of withdrawal, the EPO will terminate the opposition appeal proceedings, as no Opponents remain.
-        \item[\textbf{(c.2)}] After receipt of the notice of withdrawal, the EPO may continue the opposition appeal proceedings at its own motion under R.84(2), last sentence.
+        \item[\textbf{(c.1)}] Upon receipt of the notice of withdrawal, the EPO will terminate the opposition appeal proceedings, as no Opponents remain. \T --- G7/91, G8/93 and G8/91. Appeal is terminated if sole appellant/opponent withdraws opposition. opposition \textit{appeal} is withdrawn; then the proceedings are automatically ended.
+        \item[\textbf{(c.2)}] After receipt of the notice of withdrawal, the EPO may continue the opposition appeal proceedings at its own motion under R.84(2), last sentence. \F -- that rule is about oppositions; not opposition appeals.
     \end{itemize}
 
+\vspace{1cm}
   
 
     % --- QUESTION 2 ---
@@ -2380,18 +2383,18 @@ So, the order of claim 1 and 2 has to be reversed. \\
     \vspace{0.5em}
     \textbf{(a) Signature:}
     \begin{itemize}[leftmargin=3.5em]
-        \item[\textbf{(a.1)}] A signature is required. If the signature is not provided on the same day, the opposition will be deemed not to have been filed.
-        \item[\textbf{(a.2)}] A signature is required. The opponent will be invited to provide it within a period set by the EPO. If provided, the opposition is validly filed.
-        \item[\textbf{(a.3)}] A signature is required. If not provided within the set period, the opposition is deemed inadmissible.
+        \item[\textbf{(a.1)}] A signature is required. If the signature is not provided on the same day, the opposition will be deemed not to have been filed. \F -- you will get invite from EPO within a period to be specified; usually \textbf{2m} -- see \ru{50(3)}.
+        \item[\textbf{(a.2)}] A signature is required. The opponent will be invited to provide it within a period set by the EPO. If provided, the opposition is validly filed. \T
+        \item[\textbf{(a.3)}] A signature is required. If not provided within the set period, the opposition is deemed inadmissible. \F -- it will be deemed to not have been filed at all.
     \end{itemize}
 
     \textbf{(b) Fee:}
     \begin{itemize}[leftmargin=3.5em]
-        \item[\textbf{(b.1)}] If the deficiency is not timely rectified, the opposition fee will be refunded.
-        \item[\textbf{(b.2)}] Irrespective of whether the deficiency is rectified or not, the opposition fee will not be refunded.
+        \item[\textbf{(b.1)}] If the deficiency is not timely rectified, the opposition fee will be refunded. \T
+        \item[\textbf{(b.2)}] Irrespective of whether the deficiency is rectified or not, the opposition fee will not be refunded. \F
     \end{itemize}
 
-  
+  \vspace{1cm}
 
     % --- QUESTION 3 ---
     \item H9-12 - T/F question (Basic selection) \\
@@ -2400,38 +2403,38 @@ So, the order of claim 1 and 2 has to be reversed. \\
     \vspace{0.5em}
     \textbf{(a) An opposition may be filed...}
     \begin{itemize}[leftmargin=3.5em]
-        \item[\textbf{(a.1)}] ... On the ground of lack of novelty over public prior use in Australia.
-        \item[\textbf{(a.2)}] ... On the ground of non-patentability of methods for treatment of the animal body by surgery.
-        \item[\textbf{(a.3)}] ... On the ground of lack of unity.
-        \item[\textbf{(a.4)}] ... On the ground of lack of clarity of the claims.
-        \item[\textbf{(a.5)}] ... against a patent granted from a divisional application on the ground of extension beyond the content of the parent.
+        \item[\textbf{(a.1)}] ... On the ground of lack of novelty over public prior use in Australia. \T
+        \item[\textbf{(a.2)}] ... On the ground of non-patentability of methods for treatment of the animal body by surgery. \T
+        \item[\textbf{(a.3)}] ... On the ground of lack of unity. \F
+        \item[\textbf{(a.4)}] ... On the ground of lack of clarity of the claims. \F
+        \item[\textbf{(a.5)}] ... against a patent granted from a divisional application on the ground of extension beyond the content of the parent. \T
     \end{itemize}
 
     \textbf{(b) Based on arguments...}
     \begin{itemize}[leftmargin=3.5em]
-        \item[\textbf{(b.1)}] ... as to lack of novelty over an intermediate prior art document in combination with an invalid priority claim.
-        \item[\textbf{(b.2)}] ... that the description is so unclear that the skilled person cannot carry it out.
-        \item[\textbf{(b.3)}] ... that the applicant is not entitled to the patent.
+        \item[\textbf{(b.1)}] ... as to lack of novelty over an intermediate prior art document in combination with an invalid priority claim. \T
+        \item[\textbf{(b.2)}] ... that the description is so unclear that the skilled person cannot carry it out. \T
+        \item[\textbf{(b.3)}] ... that the applicant is not entitled to the patent. \F
     \end{itemize}
 
     \textbf{(c) An opposition is limited to...}
     \begin{itemize}[leftmargin=3.5em]
-        \item[\textbf{(c.1)}] ... the grounds of opposition given in the notice of opposition.
-        \item[\textbf{(c.2)}] ... the extent of opposition given in the notice of opposition.
-        \item[\textbf{(c.3)}] ... the facts and evidence cited in the notice of opposition.
+        \item[\textbf{(c.1)}] ... the grounds of opposition given in the notice of opposition. \F
+        \item[\textbf{(c.2)}] ... the extent of opposition given in the notice of opposition. \T
+        \item[\textbf{(c.3)}] ... the facts and evidence cited in the notice of opposition. \F
     \end{itemize}
 
-   
+   \vspace{1cm}
 
     % --- QUESTION 4 ---
     \item H9-14 - T/F question (Basic selection) \\
     Opposition filed on the last day and fee paid. The notice indicated grounds but contained no facts, arguments, or evidence to substantiate them.
     \begin{itemize}[label=\alph*)]
-        \item The opposition will be considered filed.
-        \item The opposition will be considered admissible.
+        \item The opposition will be considered filed. \T
+        \item The opposition will be considered admissible. \F
     \end{itemize}
 
- 
+ \vspace{1cm}
 
     % --- QUESTION 5 ---
     \item H9-18 - T/F question (Basic selection) \\
@@ -2443,7 +2446,7 @@ So, the order of claim 1 and 2 has to be reversed. \\
         \item Lack of unity of the invention is a valid ground for opposition.
     \end{itemize}
 
-  
+  \vspace{1cm}
 
     % --- QUESTION 6 ---
     \item (based on) H9-23 \\
@@ -2453,7 +2456,7 @@ So, the order of claim 1 and 2 has to be reversed. \\
         \item Can the Opposition Division object to the amended claim as lacking clarity?
     \end{itemize}
 
- 
+ \vspace{1cm}
 
     % --- QUESTION 7 ---
     \item (based on) H9-39 \\
@@ -2464,7 +2467,7 @@ So, the order of claim 1 and 2 has to be reversed. \\
         \item Would the answer to (a) be different if the proprietor requested revocation?
     \end{itemize}
 
-   
+   \vspace{1cm}
 
     % --- QUESTION 8 ---
     \item H9-41 - T/F question (Basic selection) \\
