--- a/main.tex
+++ b/main.tex
@@ -2440,10 +2440,10 @@ So, the order of claim 1 and 2 has to be reversed. \\
     \item H9-18 - T/F question (Basic selection) \\
     Grant published 29 June 2022. Patent includes Claim 1 (product) and Claim 2 (process), not linked by unity. Today is 17 March 2023.
     \begin{itemize}[label=\alph*)]
-        \item A notice of opposition must be filed at the latest by 29 March 2023.
-        \item If filed against claim 1 only, it can be extended to claim 2 after the expiry of the opposition period.
-        \item The statement setting out the grounds for opposition must be filed at the latest by 29 May 2023.
-        \item Lack of unity of the invention is a valid ground for opposition.
+        \item A notice of opposition must be filed at the latest by 29 March 2023. \T
+        \item If filed against claim 1 only, it can be extended to claim 2 after the expiry of the opposition period. \F
+        \item The statement setting out the grounds for opposition must be filed at the latest by 29 May 2023. \F -- can only be remedied within \textbf{9m} opposition period.
+        \item Lack of unity of the invention is a valid ground for opposition. \F
     \end{itemize}
 
   \vspace{1cm}
@@ -2452,8 +2452,8 @@ So, the order of claim 1 and 2 has to be reversed. \\
     \item (based on) H9-23 \\
     Proprietor amends claims to a single independent claim by incorporating features of granted claim 2 into granted claim 1.
     \begin{itemize}[label=--]
-        \item Is the opponent correct that the OD must always examine clarity of claims amended during proceedings (referring to G 9/91)?
-        \item Can the Opposition Division object to the amended claim as lacking clarity?
+        \item Is the opponent correct that the OD must always examine clarity of claims amended during proceedings (referring to G 9/91)? \F -- A claim amended during opposition proceedings is not subject to examination for compliance with \art{84} if it results from \underline{inserting a complete dependent claim as granted} into an independent claim.
+        \item Can the Opposition Division object to the amended claim as lacking clarity? \F
     \end{itemize}
 
  \vspace{1cm}
@@ -2462,9 +2462,10 @@ So, the order of claim 1 and 2 has to be reversed. \\
     \item (based on) H9-39 \\
     Proprietor requests limitation. Later, an opposition is filed.
     \begin{itemize}[label=\alph*)]
-        \item What is the legal situation/priority of proceedings?
-        \item Does the prior art document found by the Japanese patent office have to be filed when requesting limitation?
-        \item Would the answer to (a) be different if the proprietor requested revocation?
+        \item What is the legal situation/priority of proceedings? --- EPO will terminate limitation proceedings and give the opposition precedence and reimburse the limitation fee. The basis for the opposition is the patent as granted. 
+        \item Does the prior art document found by the Japanese patent office have to be filed when requesting limitation? \F -- no reasoning or prior art has to be filed with limitation request.
+        \item Would the answer to (a) be different if the proprietor requested revocation? \T -- Revocation proceedings are not terminated when an opposition is filed. (\ru{93(2)} only refers to \textit{\textbf{limitation}}. Therefore, in the case of revocation proceedings, there is \underline{no precedence of opposition.} Revocation proceedings continue after an opposition is filed, and the case proceeds to opposition only if the request for revocation is deemed not to have been filed, is rejected as inadmissible or is withdrawn. Otherwise, if the patent is revoked, the opponent(s) will be informed of this situation and the opposition proceedings will be terminated.
+
     \end{itemize}
 
    \vspace{1cm}
@@ -2473,10 +2474,10 @@ So, the order of claim 1 and 2 has to be reversed. \\
     \item H9-41 - T/F question (Basic selection) \\
     Grant: Nov 2020. Limitation requested: Jan 2022. Decision published: 25 May 2022.
     \begin{itemize}[label=\alph*)]
-        \item The third party can file a 1967 publication as third party observations during limitation proceedings.
-        \item The EPO will examine the request for limitation for novelty.
-        \item The third party can file the publication as third party observations after the decision to limit is published.
-        \item The third party may file a notice of opposition until 25 February 2023.
+        \item The third party can file a 1967 publication as third party observations during limitation proceedings. \T
+        \item The EPO will examine the request for limitation for novelty. \F
+        \item The third party can file the publication as third party observations after the decision to limit is published. \T
+        \item The third party may file a notice of opposition until 25 February 2023. \F -- what matters is the mention of grant; not anything to do with limitation decisions.
     \end{itemize}
 
 \end{enumerate} % End of LEVEL 1
