--- a/main.tex
+++ b/main.tex
@@ -1981,7 +1981,7 @@ corrected in time, the application will be refused.}`` --- \textsc{Euro-PCT Guid
     \end{enumerate}
  
  
-    
+\end{enumerate}    
 \section{November 24, 2025}
 
 \begin{enumerate}[label=\textbf{Question \arabic*}]
@@ -2144,7 +2144,7 @@ corrected in time, the application will be refused.}`` --- \textsc{Euro-PCT Guid
         \item The renewal fee for the fourth year must be paid separately in each state where the patent is validated. The renewal fee for the fourth year can be validly paid without any additional fee until 8 January 2024 at the latest. \T -- \textbf{Art. 141(2) EPC} provides for a 2-month ``safety'' period regardless of national law after mention of grant.
         \item The renewal fee for the fourth year must be paid separately in each state where the patent is validated. The renewal fee for the fourth year can be validly paid without any additional fee until 16 January 2024 at the latest. \F -- it's 8 \textsc{jan} 2024 at the latest.
     \end{enumerate}
-
+\end{enumerate}
 \section{December 01, 2025}
 
 \begin{enumerate}[label=\textbf{Question \arabic*}]
@@ -2246,7 +2246,7 @@ corrected in time, the application will be refused.}`` --- \textsc{Euro-PCT Guid
         \item Composition comprising X for use as an antibacterial agent \T --- Not a further medical use within the meaning of \textbf{Art. 53(c) EPC}, because the claim does not define a specific medical use of the claimed product. It encompasses non-medical uses, because antifungal/antibacterial agents are also used in e.g., agriculture for treating plants.
     \end{enumerate}
 
-    
+\end{enumerate}    
 \section{December 08, 2025}
 
 \begin{enumerate}[label=\textbf{Question \arabic*}]
@@ -2328,7 +2328,7 @@ So, the order of claim 1 and 2 has to be reversed. \\
     \end{itemize}
 
 \end{enumerate}
-    
+  
 %%%%%%%%%%%%%J ANUARY 12 2026
     
     
@@ -2480,8 +2480,88 @@ So, the order of claim 1 and 2 has to be reversed. \\
         \item The third party may file a notice of opposition until 25 February 2023. \F -- what matters is the mention of grant; not anything to do with limitation decisions.
     \end{itemize}
 
+\section{January 19, 2026}
+
+\begin{enumerate}[label=\textbf{Question \arabic*}, leftmargin=*]
+
+    % --- Question 1 ---
+    \item H10-04 (Basic selection) \\
+    \begin{enumerate}[label=(\alph*)]
+        \item By when must an appeal be filed?
+        \item Is this period extendable?
+        \item When must the appeal fee be paid? What is the amount? Any reduction possible when the opponent is a person referred to in Article 14(4) EPC?
+        \item Can a late filing of the notice of appeal or a late payment of the appeal fee be remedied with further processing or re-establishment of rights?
+    \end{enumerate}
+\vspace{1cm}
+    % --- Question 2 ---
+    \item H10-12 (Basic selection) \\
+    For each of the following situations, indicate whether the statement is true or false.
+
+    \begin{enumerate}[label=\textbf{Case \arabic*}, leftmargin=3.5em]
+        \item After a refusal, the applicant filed a main request and an auxiliary request with the letter of appeal. The main request is the same as the one refused (i.e. not amended). However, the auxiliary request corresponds to a suggestion made by the examining division and would thus be allowable. \\
+        \textbf{1.} There must be an interlocutory revision.
+
+        \item After a refusal for lack of novelty only, the applicant filed new claims with the letter of appeal. The new claims are clearly novel but not inventive. The question of inventive step had not been raised in the decision or in the previous procedure. \\
+        \textbf{2.} There must be an interlocutory revision.
+
+        \item After a refusal for lack of novelty over D1, the applicant filed a new claim 1 with the letter of appeal. New claim 1 filed which includes a feature from the description. This feature had not been previously discussed per se; however, it is clearly disclosed in D1. \\
+        \textbf{3.} There must be an interlocutory revision.
+
+        \item After a refusal for lack of inventive step vis-a-vis D1 and D2, the applicant filed new claims with the letter of appeal. The new claims include a feature from the description. This feature had not been previously discussed, but is clearly disclosed in D1. \\
+        \textbf{4.} There must be an interlocutory revision.
+
+        \item After a refusal for lack of inventive step vis-a-vis D1 and D2, the applicant filed a new claim with the letter of appeal. The new claim includes five new features from the description. These features have not been previously discussed. The examiner notes that although these features are disclosed in D2, the lack-of-inventive-step argumentation would have to be revised. \\
+        \textbf{5.} There must be an interlocutory revision.
+
+        \item After a refusal for lack of clarity of the claims, the applicant included a wording that has already been suggested by the examiner. The new claims are ready for grant but the description needs to be adapted. \\
+        \textbf{6.} There must be an interlocutory revision.
+
+        \item After a refusal, the applicant points out in the letter of appeal that the examining division has overlooked a request for oral proceedings. Neither claims nor description are amended. The examining division looks at the file and notes that the request for oral proceedings was indeed overlooked.
+        \begin{enumerate}[label=\textbf{7.\arabic*}]
+            \item There must be an interlocutory revision.
+            \item Interlocutory revision must even be made if it is expected to result in a further refusal after oral proceedings have been held.
+            \item If interlocutory revision is made, the appeal fee must be refunded.
+        \end{enumerate}
+
+        \item On the date of filing, the application documents did not comply with the requirements of Rule 46 EPC. The application was subsequently refused pursuant Art. 90(5) EPC since the applicant filed the same poor-quality drawings in reply to the communication under Rule 58 EPC. When filing an appeal complying with the requirements of Art. 108, the applicant also files drawings of sufficient quality, thereby correcting the deficiency on which the refusal was based. \\
+        \textbf{8.} There must be an interlocutory revision.
+    \end{enumerate}
+\vspace{1cm}
+    % --- Question 3 ---
+    \item H10-17 \\
+    The notice of appeal and the statement setting out the grounds of appeal are filed and the fee for appeal is paid in time. \\
+    In which of the following cases is the notice of appeal inadmissible? Can the deficiency be remedied? What period applies? Will the appeal fee be refunded?
+    \begin{enumerate}[label=(\alph*)]
+        \item The notice of appeal is not signed.
+        \item The address of the appellant is incomplete.
+        \item The notice of appeal is filed by the patent proprietor following a decision of the Opposition Division to maintain the patent based on the main request and in a form as amended by the proprietor.
+        \item The grounds give a mere reference in general terms to passages in the literature showing the state of the art and to the Guidelines without making their inference sufficiently clear.
+    \end{enumerate}
+
+    \vspace{1cm}
+    % --- Question 4 ---
+    \item H10-23 - T/F question (Basic selection) \\
+    European patent application EP-Y was refused at oral proceedings before the examining division. The oral proceedings took place on 19 February 2021. Today, 1 March 2021, you received the written reasoned decision. \\
+    For each of the statements below, indicate whether the statement is true or false:
+    \begin{enumerate}[label=\Alph*.]
+        \item A notice of appeal against the decision to refuse the patent application must be filed at the latest by 19 April 2021.
+        \item The statement setting out the grounds of appeal and possibly amendments must be filed together with the notice of appeal.
+        \item The examining division shall rectify its decision if it finds the appeal to be admissible and well-founded.
+        \item The appeal fee is always reimbursed, if the board of appeal sets aside the decision of the examining division.
+    \end{enumerate}
+\vspace{1cm}
+    % --- Question 5 ---
+    \item H10-24 (Basic selection)
+    \begin{enumerate}[label=(\alph*)]
+        \item Can a decision of a Board of Appeal be challenged?
+        \item On which grounds may a petition for review be based?
+        \item Does a petition for review have suspensive effect? Why (not)?
+        \item Are third parties protected at all if a successful petition for review results in the revival of lost patent protection?
+    \end{enumerate}
+
+\end{enumerate}    
+    
+    
 \end{enumerate} % End of LEVEL 1
-\end{enumerate}
-\end{enumerate}
-\end{enumerate}
+
 \end{document}
