--- a/main.tex
+++ b/main.tex
@@ -2487,10 +2487,10 @@ So, the order of claim 1 and 2 has to be reversed. \\
     % --- Question 1 ---
     \item H10-04 (Basic selection) \\
     \begin{enumerate}[label=(\alph*)]
-        \item By when must an appeal be filed?
-        \item Is this period extendable?
-        \item When must the appeal fee be paid? What is the amount? Any reduction possible when the opponent is a person referred to in Article 14(4) EPC?
-        \item Can a late filing of the notice of appeal or a late payment of the appeal fee be remedied with further processing or re-establishment of rights?
+        \item By when must an appeal be filed? --- within \textbf{2m} of notification of the decision (\art{108}).
+        \item Is this period extendable? -- no; it's a stated period in the EPC so it cannot be extended. It can only be extended through \ru{134(1)}, i.e., weekends, etc.
+        \item When must the appeal fee be paid? What is the amount? Any reduction possible when the opponent is a person referred to in Article 14(4) EPC? --- it must be paid when filing the notice of appeal (otherwise notice not considered to have been filed). 2015 EUR when filed by a natural person or entity referred to in \ru{7a(2)}. \underline{No fee reduction for \art{14(4)} persons}. Otherwise 2925 EUR.
+        \item Can a late filing of the notice of appeal or a late payment of the appeal fee be remedied with further processing or re-establishment of rights? \underline{\textbf{FP} is specifically ruled out} for filing a notice appeal by \textbf{Art. 121(4) EPC}. Since \textbf{FP} is ruled out; \textbf{RE} is available. To be precise; \textbf{RE} is available for the Applicant/proprietor, and \textbf{RE} is available for the appellant when they miss the \textbf{4m} period for filing the statement of grounds of appeal.
     \end{enumerate}
 \vspace{1cm}
     % --- Question 2 ---
